--- a/programme.qmd
+++ b/programme.qmd
@@ -22,10 +22,9 @@ title: "2025 V4SDB Winter School Programme"
 | 11:00-11:30   | Coffee Break                               |
 | 11:30-13:00   | Morning Session II (Gáspár Jékely)         |
 | 13:00-14:30   | Lunch (buffet)                             |
-| 14:30-16:30   | Afternoon Session I (Joanna Pylvänäinen)   |
+| 14:30-16:30   | [Afternoon Session I (Joanna Pylvänäinen)](cell_tracking.qmd)   |
 | 16:30-17:00   | Coffee Break                               |
-| 17:00-18:30   | Afternoon Session II (Joanna Pylvänäinen)  |
-| 20:00-23:00   | Dinner for Lecturers                       |
+| 17:00-18:30   | [Afternoon Session II (Joanna Pylvänäinen)](cell_tracking.qmd)  |
 
 ### Thursday, January 30
 
