--- a/programme.qmd
+++ b/programme.qmd
@@ -44,7 +44,7 @@ title: "2025 V4SDB Winter School Programme"
 |:--------------|:--------------------------------------------|
 | 09:00-11:00   | Morning Session I (Giulia Bertolin - online) |
 | 11:00-11:30   | Coffee Break                               |
-| 11:30-13:00   | Morning Session II (Adriana Nagy-Dăbâcan)       |
+| 11:30-13:00   | [Morning Session II (Adriana Nagy-Dăbâcan)](bonsai.qmd)       |
 | 13:00-13:30   | Closing remarks, Lunch (take away)         |
 
 ::: {.callout-note}
@@ -56,6 +56,8 @@ title: "2025 V4SDB Winter School Programme"
 
 
 ## Location {.unnumbered}
+
+The Winter School will take place on the premises of the Faculty of Science of ELTE Eötvös Loránd University - Pázmány Péter stny. 1/A, 1117 Budapest. Lectures will be in room 0.83 ("Eötvös terem") - follow the signs.
 
 ```{=html}
 <center>
