Calcium imaging - update

--- a/bonsai.qmd
+++ b/bonsai.qmd
@@ -51,4 +51,4 @@ By the end of the workshop, participants will be familiar with Bonsai as a tool 
 - [Learning Resources](https://bonsai-rx.org/learn/)
 
 ## References
-Lopes, G., Bonacchi, N., Frazão, J., Neto, J. P., Atallah, B. V., Soares, S., ... & Kampff, A. R. (2015). **Bonsai: an event-based framework for processing and controlling data streams. Frontiers in neuroinformatics**, 9, 7. [https://doi.org/10.3389/fninf.2015.00007](https://doi.org/10.3389/fninf.2015.00007)
+Lopes, G., Bonacchi, N., Frazão, J., Neto, J. P., Atallah, B. V., Soares, S., ... & Kampff, A. R. (2015). **Bonsai: an event-based framework for processing and controlling data streams.** *Frontiers in Neuroinformatics**, 9, 7. [https://doi.org/10.3389/fninf.2015.00007](https://doi.org/10.3389/fninf.2015.00007)
