--- a/index.qmd
+++ b/index.qmd
@@ -19,7 +19,7 @@ Our target audience are graduate students (both at MSc and PhD level). Thanks to
 - [Isaac Bianco](http://zebrafishucl.org/bianco-lab#research-2) - University College London, London, UK
 - [Kenzo Ivanovitch](https://www.ivanovitch-lab.com) - University College London, London, UK
 - [Giulia Bertolin](https://igdr.univ-rennes.fr/en/mitochondrial-biology-and-integration-cell-cycle-team) - Insitute of Genetics and Development of Rennes, Rennes, France
-- [Adriana Nagy-Dăbâcan](https://muresanlab.tins.ro) - Transylvania Institute of Neuroscience, Cluj-Napoca, Romania
+- [Adriana Nagy-Dăbâcan](https://muresanlab.tins.ro) - Transylvanian Institute of Neuroscience, Cluj-Napoca, Romania
 
 **Organizer:** 
 
