lightsheet data update v3

--- a/lightsheet_data.qmd
+++ b/lightsheet_data.qmd
@@ -49,7 +49,7 @@ https://posit.co/downloads/
 
 ## Data
 
-This is the [data directory](https://liveuclac-my.sharepoint.com/personal/ucklkdi_ucl_ac_uk/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fucklkdi%5Fucl%5Fac%5Fuk%2FDocuments%2FTeaching%2FTeaching%20Hungary%2FV4SDB%5FV2&ga=1).
+This is the [data directory](https://liveuclac-my.sharepoint.com/:f:/g/personal/ucklkdi_ucl_ac_uk/EjUpOE4nfOpCiwKNeizpq7wBCYZ9luDw53eL3VZimcesBg?e=XZDhHs).
 
 ## Workshop step by step:
  
