--- a/bonsai.qmd
+++ b/bonsai.qmd
@@ -13,12 +13,11 @@ dabacan@tins.ro
 
 ## Workshop Overview
 
-During the session, we will present Bonsai as a reactive programming tool usefull when designing and analyzing behavioral experiments. We will go through the potential applications for Bonsai and its most relevant usecases. 
-Then, we will get familiar with this tool by implementing a simple workflow combining animal tracking with closed loop control. We will showcase basic programming principles and will open the door for addressing more complex needs in experimental design.
+During the session, we will present Bonsai as a reactive programming tool usefull when designing and analyzing behavioral experiments. We will go through the potential applications for Bonsai and its most relevant usecases. Then, we will get familiar with this tool by implementing a simple workflow combining animal tracking with closed loop control. We will showcase basic programming principles and will open the door for addressing more complex needs in experimental design.
 
 By the end of the workshop, participants will be familiar with Bonsai as a tool for behavioral experimental control and will understand its basic principles of operation. They will have a good source of documentation and will be able to join the community for further support. 
 
-[slides (to be updated)]()
+[Workshop slides](https://github.com/dabacana/V4SDB_Bonsai_Intro/blob/main/Bonsai%20Behavior.pptx)
 
 ## Software
 [**Bonsai**](https://bonsai-rx.org/docs/articles/installation.html): 
