--- a/bonsai.qmd
+++ b/bonsai.qmd
@@ -11,6 +11,8 @@ Materials for the  V4SDB Student Winter School Bonsai introduction and tutorial
 Adriana Nagy-Dăbâcan (Transylvanian Institute of Neuroscience)<br> 
 dabacan@tins.ro
 
+See Github link [here](https://github.com/dabacana/V4SDB_Bonsai_Intro).
+
 ## Workshop Overview
 
 During the session, we will present Bonsai as a reactive programming tool usefull when designing and analyzing behavioral experiments. We will go through the potential applications for Bonsai and its most relevant usecases. Then, we will get familiar with this tool by implementing a simple workflow combining animal tracking with closed loop control. We will showcase basic programming principles and will open the door for addressing more complex needs in experimental design.
