--- a/programme.qmd
+++ b/programme.qmd
@@ -9,7 +9,7 @@ title: "2025 V4SDB Winter School Programme"
 | Time          | Activity                                    |
 |:--------------|:--------------------------------------------|
 | 13:00-14:00   | Registration                                |
-| 14:00-15:00   | **"Open Science in (In)Action: Why, What, and How"**<br> Public Lecture by Gáspár Jékely     |
+| 14:00-15:00   | **"Open Science in (In)Action: Why, What, and How"**<br> [Public Lecture by Gáspár Jékely](open_science.qmd)     |
 | 15:00-16:00   | Coffee Break, Registration                  |
 | 16:00-17:30   | Flash Talks by Students                     |
 | 20:00-23:00   | Social Program  (at [The Grund](https://maps.app.goo.gl/FUw6Qk3jtZvpqaRZ9))                           |
