--- a/open_science.qmd
+++ b/open_science.qmd
@@ -2,7 +2,7 @@
 title: "Open Science in (In)Action: Why, What, and How"
 ---
 
-Public Lecture by [Gáspár Jékely](https://jekelylab.github.io) (Centre for Organismal Studies, Heidelberg University)
+Public Lecture by [Gáspár Jékely](https://jekelylab.github.io) (Centre for Organismal Studies, Heidelberg University) / [Prof. Jékely Gáspár](https://jekelylab.github.io) (Centre for Organismal Studies, Heidelberg University) nyílt előadása
 
 ## Slides
 
