--- a/bevezeto.qmd
+++ b/bevezeto.qmd
@@ -24,7 +24,7 @@ Célközönségünk mesterképzéses és doktori hallgatók. A Nemzeti Kutatási
 - [Isaac Bianco](http://zebrafishucl.org/bianco-lab#research-2) - University College London, London, Egyesült Királyság
 - [Kenzo Ivanovitch](https://www.ivanovitch-lab.com) - University College London, London, Egyesült Királyság
 - [Giulia Bertolin](https://igdr.univ-rennes.fr/en/mitochondrial-biology-and-integration-cell-cycle-team) - Insitute of Genetics and Development of Rennes, Rennes, Franciaország
-- [Adriana Nagy-Dăbâcan](https://muresanlab.tins.ro) - Transylvanian Institute of Neuroscience, Cluj-Napoca, Románia
+- [Adriana Nagy-Dăbâcan](https://muresanlab.tins.ro) - Transylvanian Institute of Neuroscience, Kolozsvár (Cluj-Napoca), Románia
 
 **Szervező:** 
 
